--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -10,14 +10,15 @@
   height: 440px;
   background-color: #f1f3ff;
   display: flex;
-  padding: 118px 0 0 135px !important;
+  padding: 50px 0 0 135px !important;
 }
 
 .header .desc {
   display: flex;
+  width: 50%;
   flex-direction: column;
   gap: 16px;
-  padding-right: 32px !important;
+  padding: 80px 32px 0 0 !important;
 }
 
 .header .desc h1 {
@@ -27,21 +28,16 @@
 }
 
 .header .desc p {
-  padding-right: 100px !important;
   font-size: 14px;
   font-weight: 700;
   line-height: 20px;
+  width: 91%;
 }
 
-.header .desc .btn {
-  padding-right: 0 !important;
-}
-
-.header .desc a {
+.header .desc button {
   text-decoration: none;
   width: 140px;
   height: 36px;
-  padding: 8px 12px !important;
   box-sizing: border-box;
   background-color: #5cb85f;
   border: none;
@@ -49,23 +45,47 @@
   color: white;
 }
 
+.header .desc a {
+  color: white;
+  text-decoration: none;
+  padding: 12px 16px !important;
+}
+
+.header .img-wrapper {
+  width: 50%;
+  height: 100%;
+}
+
+.header img {
+  width: 100%;
+  height: 100%;
+}
+
 @media screen and (max-width: 360px) {
   .header {
     display: block;
     height: auto;
-    padding: 32px 16px 0 !important;
+    padding: 32px 0px 0 16px !important;
   }
 
   .header .desc {
+    width: 100%;
     margin-bottom: 24px;
   }
 
   .header .desc p {
-    padding: 0 !important;
+    /* padding: 0 !important; */
+    padding-right: 16px !important;
   }
 
   .header .desc a {
     margin-bottom: 8px;
+  }
+
+  .header .img-wrapper {
+    width: 100%;
+    height: 100%;
+    padding-right: 0 !important;
   }
 
   .header img {
