--- a/src/pages/SignIn/style.css
+++ b/src/pages/SignIn/style.css
@@ -37,16 +37,17 @@ h2 {
   line-height: 20px; /* 142.857% */
 }
 
-.register .sign-page input {
-  /* width: 370px; */
-  margin-bottom: 31.75px;
+.register .sign-page input::placeholder {
   color: #a5a5a5;
   font-size: 12px;
   font-weight: 400;
   line-height: 18px; /* 150% */
+  padding: 10px 0 10.25px 15px !important;
+  box-sizing: border-box;
 }
 
 .register .sign-page button {
+  margin-top: 31.75px;
   width: 100%;
   background-color: #0d28a6;
   margin-bottom: 32px;
@@ -56,16 +57,22 @@ h2 {
   line-height: 20px; /* 142.857% */
   padding: 8px 12px !important ;
   box-sizing: border-box;
+  text-decoration: none;
+}
+
+.register .sign-page a {
+  color: #fff;
+  text-decoration: none;
 }
 
 h6 {
   font-size: 0.9rem !important;
 }
 
-.register .sign-page Link {
+.register .sign-page .login-area span {
   color: #0d28a6;
   font-size: 14px;
-  font-weight: 700;
+  font-weight: 700 !important;
   line-height: 20px; /* 142.857% */
   text-decoration-line: underline;
 }
