--- a/src/components/CTA/style.css
+++ b/src/components/CTA/style.css
@@ -36,10 +36,12 @@
 
 .cta-banner .container a {
   display: flex;
-  margin: auto;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
   text-decoration: none;
   width: 140px;
-  height: 36px;
+  height: 20px;
   padding: 8px 12px !important;
   box-sizing: border-box;
   border-radius: 2px;
@@ -53,6 +55,10 @@
   font-size: 14px;
   font-weight: 700;
   line-height: 20px; /* 142.857% */
+}
+
+.cta-banner .container a p {
+  margin: 0;
 }
 
 @media screen and (max-width: 360px) {
