--- a/src/components/FAQ/style.css
+++ b/src/components/FAQ/style.css
@@ -1,3 +1,15 @@
+h3,
+h5,
+h5,
+h6 {
+  font-weight: unset !important ;
+}
+
+h5,
+.h5 {
+  font-size: 14px !important;
+}
+
 .faq {
   max-width: 1440px;
   height: auto;
@@ -23,6 +35,12 @@
   font-size: 24px;
   font-weight: 700;
   line-height: 36px; /* 150% */
+}
+
+.faq .desc .list-faq h5 {
+  font-size: 14px !important;
+  font-weight: 400;
+  line-height: 20px; /* 142.857% */
 }
 
 .faq .desc p {
