--- a/src/components/Testimonial/style.css
+++ b/src/components/Testimonial/style.css
@@ -5,8 +5,12 @@
   margin: 0 auto 100px;
 }
 
-.testimony h1 {
-  margin-bottom: 16px;
+.testimony h2 {
+  color: #000;
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 36px; /* 150% */
+  margin-bottom: 16px !important;
 }
 
 .testimony .tdesc {
@@ -16,11 +20,11 @@
 .testimony .list-testy {
   display: flex;
   gap: 32px;
-  flex-wrap: nowrap;
 }
 
 .testimony .list-testy .testy {
   display: flex;
+
   align-items: center;
   padding: 0 32px 0 46px !important;
   gap: 46px;
@@ -36,10 +40,12 @@
   height: 80px;
 }
 
+.testimony p,
 .testimony .list-testy .testy p {
   font-size: 14px;
   font-weight: 700;
   line-height: 20px; /* 142.857% */
+  margin: 0;
 }
 
 .testimony .list-testy .testy .text {
@@ -53,6 +59,30 @@
 .testimony .list-testy .testy .text img {
   width: 80px;
   height: 16px;
+}
+.testimony button {
+  border: 1px solid gainsboro;
+  border-radius: 100px;
+  font-size: 40px;
+  padding: 20px !important;
+  /* background-color: green; */
+}
+
+.swiper {
+  width: 100%;
+  height: 100%;
+}
+
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+
+  /* Center slide text vertically */
+  flex-shrink: unset !important;
+  display: block;
+  justify-content: center;
+  align-items: center;
 }
 
 @media screen and (max-width: 360px) {
