--- a/src/pages/Home/style.css
+++ b/src/pages/Home/style.css
@@ -1,4 +1,10 @@
+* {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 .home {
   height: auto;
   overflow: hidden;
+  max-width: 1440px;
+  margin: auto;
 }
