--- a/src/components/Testimonial/style.css
+++ b/src/components/Testimonial/style.css
@@ -68,6 +68,8 @@
   /* background-color: green; */
 }
 
+/* SWIPER CODE START */
+
 .swiper {
   width: 100%;
   height: 100%;
@@ -83,6 +85,18 @@
   display: block;
   justify-content: center;
   align-items: center;
+}
+
+.swiper-button-prev:after,
+.swiper-button-next:after {
+  display: inline-block;
+  /* margin-top: 24px; */
+  font-size: 10px !important;
+  background-color: #5cb85f;
+  padding: 15px;
+  border-radius: 100px;
+  border: 2px solid #5cb85f;
+  color: white;
 }
 
 @media screen and (max-width: 360px) {
