--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -1,6 +1,5 @@
 * {
   font-family: Arial, Helvetica, sans-serif;
-  /* overflow: hidden; */
 }
 
 .header {
@@ -10,7 +9,8 @@
   height: auto;
   background-color: #f1f3ff;
   display: flex;
-  padding: 50px 0 0 135px !important;
+  padding: 50px 0px 0 135px !important;
+  box-sizing: border-box !important;
 }
 
 .header .desc {
