--- a/src/components/Testimonial/style.css
+++ b/src/components/Testimonial/style.css
@@ -64,6 +64,10 @@
 
 /* SWIPER CODE START */
 
+.swiper-wrapper {
+  padding-bottom: 24px !important;
+}
+
 .swiper-slide {
   /* text-align: center;
   font-size: 24px;
@@ -134,6 +138,10 @@
     flex-direction: column;
     align-items: center;
     text-align: center;
+  }
+
+  .swiper-wrapper {
+    padding-bottom: 0 !important;
   }
 
   .swiper-button-prev {
