--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -67,12 +67,13 @@
   .header {
     display: block;
     height: auto;
-    padding: 32px 0px 0 16px !important;
+    padding: 0px 0px 0 16px !important;
   }
 
   .header .desc {
     width: 100%;
     margin-bottom: 24px;
+    padding-top: 0px !important;
   }
 
   .header .desc p {
