--- a/src/components/Testimonial/style.css
+++ b/src/components/Testimonial/style.css
@@ -128,7 +128,8 @@
   .testimony .list-testy .testy {
     width: 284px;
     height: auto;
-    padding: 40px 0 !important;
+    padding: 40px 32px !important;
+    gap: 24px;
     display: flex;
     flex-direction: column;
     margin: 32px auto;
@@ -139,6 +140,10 @@
     flex-direction: column;
     align-items: center;
     text-align: center;
+  }
+
+  .testimony .list-testy .testy .text img {
+    margin-bottom: 16px;
   }
 
   .swiper-wrapper {
