--- a/src/components/FAQ/style.css
+++ b/src/components/FAQ/style.css
@@ -8,6 +8,8 @@ h6 {
 h5,
 .h5 {
   font-size: 14px !important;
+  margin-bottom: 0 !important;
+  line-height: 20px !important;
 }
 
 .faq {
@@ -45,7 +47,7 @@ h5,
 
 .faq .desc p {
   font-size: 14px;
-  font-weight: 700;
+  font-weight: 400;
   line-height: 20px; /* 142.857% */
 }
 
@@ -66,6 +68,7 @@ h5,
   align-items: center;
   padding: 0 24px !important;
   justify-content: space-between;
+  box-sizing: content-box !important;
 }
 
 .faq .container .list-faq img {
@@ -79,6 +82,10 @@ h5,
     width: 328px;
     /* height: 376px; */
     text-align: center;
+  }
+
+  .faq {
+    box-sizing: unset !important;
   }
 
   .faq .container .desc p {
