--- a/src/components/CarsDetails/style.css
+++ b/src/components/CarsDetails/style.css
@@ -3,6 +3,7 @@
   margin: 0 auto 152px;
   display: flex;
   gap: 32px;
+  /* box-sizing: border-box !important; */
 }
 
 .cars-details .desc {
@@ -50,10 +51,13 @@
   gap: 8px;
 }
 
+.cars-details .details .image {
+  margin: auto !important;
+}
+
 .cars-details .details img {
   width: 270px;
   height: 160px;
-  padding: 28px 67px !important;
   margin-bottom: 24px;
 }
 
