--- a/src/components/CarsSearching/style.css
+++ b/src/components/CarsSearching/style.css
@@ -4,7 +4,7 @@
   height: auto;
   /* border: 1px solid black; */
   border-radius: 8px;
-  margin: -42px auto 40px;
+  margin: -42px auto 20px;
   position: relative;
   box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.15);
   z-index: 9999;
@@ -20,6 +20,7 @@
   display: flex;
   padding: 24px !important;
   gap: 16px;
+  box-sizing: content-box !important;
 }
 
 .car-searching .car-category .category,
@@ -127,6 +128,9 @@
   box-sizing: border-box !important;
   /* border: 1px solid black; */
   margin: 24px 0;
+  border: 1px solid #ffffff;
+  border-radius: 8px;
+  box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.15);
 }
 
 .list-car .list img {
@@ -182,7 +186,7 @@
   display: flex;
   gap: 20px;
   position: relative;
-  bottom: 50px;
+  bottom: 20px;
 }
 
 .hero .pagination button {
